// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <aside
        class="sc-gswNZR licquX sidebar"
        data-testid="sidebar-test-id"
        style="z-index: 100;"
        width="230px"
      >
        <div
          class="sc-dkrFOg gQwXYT sidebar-inner"
          data-testid="inner-sidebar-test-id"
        >
          <h3
            class="text-white bg-primary text-center p-2"
          >
            Algorithms
          </h3>
          <nav
            class="menu"
          >
            <ul
              class="sc-eDvSVe gnJkew"
            >
              <li
                class="sc-eDWCr ffSMgA sub-menu menu-item open"
              >
                <a
                  class="sc-pyfCe lkTtqM menu-anchor"
                >
                  <span
                    class="sc-gKPRtg ktVuSn menu-label"
                  >
                    Searching
                  </span>
                  <span
                    class="sc-kDvujY hUHiae expand-icon"
                  >
                    <span
                      class="sc-ipEyDJ bqvrAb"
                      open=""
                    />
                  </span>
                </a>
                <div
                  class="sc-jSUZER oVBfl sub-menu-content"
                  open=""
                >
                  <ul
                    class="sc-eDvSVe gnJkew"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      href="/linear-search"
                      level="1"
                    >
                      Linear Search
                    </a>
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      href="/binary-search"
                      level="1"
                    >
                      Binary Search
                    </a>
                  </ul>
                </div>
              </li>
              <li
                class="sc-eDWCr ffSMgA sub-menu menu-item"
              >
                <a
                  class="sc-pyfCe lkTtqM menu-anchor"
                >
                  <span
                    class="sc-gKPRtg ktVuSn menu-label"
                  >
                    Sorting
                  </span>
                  <span
                    class="sc-kDvujY hUHiae expand-icon"
                  >
                    <span
                      class="sc-ipEyDJ jFdoiu"
                    />
                  </span>
                </a>
                <div
                  class="sc-jSUZER daWgIu sub-menu-content"
                >
                  <ul
                    class="sc-eDvSVe gnJkew"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      href="/bubble-sort"
                      level="1"
                    >
                      Bubble Sort
                    </a>
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      href="/quick-sort"
                      level="1"
                    >
                      Quick Sort
                    </a>
                  </ul>
                </div>
              </li>
              <li
                class="sc-eDWCr ffSMgA sub-menu menu-item"
              >
                <a
                  class="sc-pyfCe lkTtqM menu-anchor"
                >
                  <span
                    class="sc-gKPRtg ktVuSn menu-label"
                  >
                    Binary Tree
                  </span>
                  <span
                    class="sc-kDvujY hUHiae expand-icon"
                  >
                    <span
                      class="sc-ipEyDJ jFdoiu"
                    />
                  </span>
                </a>
                <div
                  class="sc-jSUZER daWgIu sub-menu-content"
                >
                  <ul
                    class="sc-eDvSVe gnJkew"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      href="/binary-tree"
                      level="1"
                    >
                      BFS and DFS Traversal
                    </a>
                  </ul>
                </div>
              </li>
              <li
                class="sc-eDWCr ffSMgA sub-menu menu-item"
              >
                <a
                  class="sc-pyfCe lkTtqM menu-anchor"
                >
                  <span
                    class="sc-gKPRtg ktVuSn menu-label"
                  >
                    Cryptography
                  </span>
                  <span
                    class="sc-kDvujY hUHiae expand-icon"
                  >
                    <span
                      class="sc-ipEyDJ jFdoiu"
                    />
                  </span>
                </a>
                <div
                  class="sc-jSUZER daWgIu sub-menu-content"
                >
                  <ul
                    class="sc-eDvSVe gnJkew"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      href="/caesar-cipher"
                      level="1"
                    >
                      Caesar Cipher
                    </a>
                  </ul>
                </div>
              </li>
              <li
                class="sc-eDWCr ffSMgA sub-menu menu-item"
              >
                <a
                  class="sc-pyfCe lkTtqM menu-anchor"
                >
                  <span
                    class="sc-gKPRtg ktVuSn menu-label"
                  >
                    Computer Graphics
                  </span>
                  <span
                    class="sc-kDvujY hUHiae expand-icon"
                  >
                    <span
                      class="sc-ipEyDJ jFdoiu"
                    />
                  </span>
                </a>
                <div
                  class="sc-jSUZER daWgIu sub-menu-content"
                >
                  <ul
                    class="sc-eDvSVe gnJkew"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      href="/flood-fill"
                      level="1"
                    >
                      Flood Fill
                    </a>
                  </ul>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </aside>
    </div>
  </body>,
  "container": <div>
    <aside
      class="sc-gswNZR licquX sidebar"
      data-testid="sidebar-test-id"
      style="z-index: 100;"
      width="230px"
    >
      <div
        class="sc-dkrFOg gQwXYT sidebar-inner"
        data-testid="inner-sidebar-test-id"
      >
        <h3
          class="text-white bg-primary text-center p-2"
        >
          Algorithms
        </h3>
        <nav
          class="menu"
        >
          <ul
            class="sc-eDvSVe gnJkew"
          >
            <li
              class="sc-eDWCr ffSMgA sub-menu menu-item open"
            >
              <a
                class="sc-pyfCe lkTtqM menu-anchor"
              >
                <span
                  class="sc-gKPRtg ktVuSn menu-label"
                >
                  Searching
                </span>
                <span
                  class="sc-kDvujY hUHiae expand-icon"
                >
                  <span
                    class="sc-ipEyDJ bqvrAb"
                    open=""
                  />
                </span>
              </a>
              <div
                class="sc-jSUZER oVBfl sub-menu-content"
                open=""
              >
                <ul
                  class="sc-eDvSVe gnJkew"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    href="/linear-search"
                    level="1"
                  >
                    Linear Search
                  </a>
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    href="/binary-search"
                    level="1"
                  >
                    Binary Search
                  </a>
                </ul>
              </div>
            </li>
            <li
              class="sc-eDWCr ffSMgA sub-menu menu-item"
            >
              <a
                class="sc-pyfCe lkTtqM menu-anchor"
              >
                <span
                  class="sc-gKPRtg ktVuSn menu-label"
                >
                  Sorting
                </span>
                <span
                  class="sc-kDvujY hUHiae expand-icon"
                >
                  <span
                    class="sc-ipEyDJ jFdoiu"
                  />
                </span>
              </a>
              <div
                class="sc-jSUZER daWgIu sub-menu-content"
              >
                <ul
                  class="sc-eDvSVe gnJkew"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    href="/bubble-sort"
                    level="1"
                  >
                    Bubble Sort
                  </a>
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    href="/quick-sort"
                    level="1"
                  >
                    Quick Sort
                  </a>
                </ul>
              </div>
            </li>
            <li
              class="sc-eDWCr ffSMgA sub-menu menu-item"
            >
              <a
                class="sc-pyfCe lkTtqM menu-anchor"
              >
                <span
                  class="sc-gKPRtg ktVuSn menu-label"
                >
                  Binary Tree
                </span>
                <span
                  class="sc-kDvujY hUHiae expand-icon"
                >
                  <span
                    class="sc-ipEyDJ jFdoiu"
                  />
                </span>
              </a>
              <div
                class="sc-jSUZER daWgIu sub-menu-content"
              >
                <ul
                  class="sc-eDvSVe gnJkew"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    href="/binary-tree"
                    level="1"
                  >
                    BFS and DFS Traversal
                  </a>
                </ul>
              </div>
            </li>
            <li
              class="sc-eDWCr ffSMgA sub-menu menu-item"
            >
              <a
                class="sc-pyfCe lkTtqM menu-anchor"
              >
                <span
                  class="sc-gKPRtg ktVuSn menu-label"
                >
                  Cryptography
                </span>
                <span
                  class="sc-kDvujY hUHiae expand-icon"
                >
                  <span
                    class="sc-ipEyDJ jFdoiu"
                  />
                </span>
              </a>
              <div
                class="sc-jSUZER daWgIu sub-menu-content"
              >
                <ul
                  class="sc-eDvSVe gnJkew"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    href="/caesar-cipher"
                    level="1"
                  >
                    Caesar Cipher
                  </a>
                </ul>
              </div>
            </li>
            <li
              class="sc-eDWCr ffSMgA sub-menu menu-item"
            >
              <a
                class="sc-pyfCe lkTtqM menu-anchor"
              >
                <span
                  class="sc-gKPRtg ktVuSn menu-label"
                >
                  Computer Graphics
                </span>
                <span
                  class="sc-kDvujY hUHiae expand-icon"
                >
                  <span
                    class="sc-ipEyDJ jFdoiu"
                  />
                </span>
              </a>
              <div
                class="sc-jSUZER daWgIu sub-menu-content"
              >
                <ul
                  class="sc-eDvSVe gnJkew"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    href="/flood-fill"
                    level="1"
                  >
                    Flood Fill
                  </a>
                </ul>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </aside>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render component 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="menu"
      >
        <ul
          class="sc-eDvSVe gnJkew"
        >
          <li
            class="sc-eDWCr ffSMgA sub-menu menu-item"
          >
            <a
              class="sc-pyfCe lkTtqM menu-anchor"
            >
              <span
                class="sc-gKPRtg ktVuSn menu-label"
              >
                SubMenuTitle
              </span>
              <span
                class="sc-kDvujY hUHiae expand-icon"
              >
                <span
                  class="sc-ipEyDJ jFdoiu"
                />
              </span>
            </a>
            <div
              class="sc-jSUZER daWgIu sub-menu-content"
            >
              <ul
                class="sc-eDvSVe gnJkew"
              >
                <a
                  class="d-block text-center p-1 text-decoration-none"
                  href="/"
                  level="1"
                >
                  Title
                </a>
              </ul>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="menu"
    >
      <ul
        class="sc-eDvSVe gnJkew"
      >
        <li
          class="sc-eDWCr ffSMgA sub-menu menu-item"
        >
          <a
            class="sc-pyfCe lkTtqM menu-anchor"
          >
            <span
              class="sc-gKPRtg ktVuSn menu-label"
            >
              SubMenuTitle
            </span>
            <span
              class="sc-kDvujY hUHiae expand-icon"
            >
              <span
                class="sc-ipEyDJ jFdoiu"
              />
            </span>
          </a>
          <div
            class="sc-jSUZER daWgIu sub-menu-content"
          >
            <ul
              class="sc-eDvSVe gnJkew"
            >
              <a
                class="d-block text-center p-1 text-decoration-none"
                href="/"
                level="1"
              >
                Title
              </a>
            </ul>
          </div>
        </li>
      </ul>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
